[package]
name = "jdn-utils"
version = "0.3.1"
edition = "2021"
description = "Common utilities for personal projects"
repository = "https://github.com/eta077/jdn-utils"
exclude = [ 
    ".github",
    "tests" 
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { version = "1.0" }
